@@ -6,6 +6,7 @@ A.F....... [ZBX-1357] updated Polish and Slovak translations; thanks to Zabbix t
 
 Bug fixes:
 ........S. [ZBX-9285] fixed memory leak when processing host prorotypes (Sasha)
+.......PS. [ZBX-9279] optimized VMware requests to reduce amount of transferred data (wiper)
 ..F....... [ZBX-9087] fixed DB_ID validation expression to properly validate upper bound of received value and fixed various front-end forms not properly validating IDs (Krists, Ivo)
 .......PS. [ZBX-7719] added configurable timeout for VMware data gathering requests (wiper)
 ...G...... [ZBX-9241] fixed possible vfs.fs.discovery item crash on AIX systems (wiper)
